fix(style): Fixed tabs navigator elements alignment

--- a/src/Imperiv/Bundle/SiteBundle/Resources/public/css/main.css
+++ b/src/Imperiv/Bundle/SiteBundle/Resources/public/css/main.css
@@ -7,7 +7,11 @@
 /*=================================
 =            Navigator            =
 =================================*/
-.navigator{
+header {
+    height: 23px;
+}
+
+.navigator {
   position: absolute;
   top: 0;
   height: 23px; width: 100%;
